@@ -238,9 +238,11 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_font.html#get_init>pygame.font.get_init</a> - get status of font module initialization<br>
 <a href=ref/pygame_font.html#init>pygame.font.init</a> - initialize the display module<br>
 <a href=ref/pygame_font.html#quit>pygame.font.quit</a> - uninitialize the font module<br>
+<a href=ref/pygame_image.html#fromstring>pygame.image.fromstring</a> - create a surface from a raw string buffer<br>
 <a href=ref/pygame_image.html#get_extended>pygame.image.get_extended</a> - save surface as BMP data<br>
 <a href=ref/pygame_image.html#load>pygame.image.load</a> - load an image to a new Surface<br>
 <a href=ref/pygame_image.html#save>pygame.image.save</a> - save surface as BMP data<br>
+<a href=ref/pygame_image.html#tostring>pygame.image.tostring</a> - create a raw string buffer of the surface data<br>
 <a href=ref/pygame_joystick.html#Joystick>pygame.joystick.Joystick</a> - create new joystick object<br>
 <a href=ref/pygame_joystick.html#get_count>pygame.joystick.get_count</a> - query number of joysticks on system<br>
 <a href=ref/pygame_joystick.html#get_init>pygame.joystick.get_init</a> - query initialization of joystick module<br>
